# Kantan-Play-MIDI

./: .gitignore  CLAUDE.md  MIDI.json  README.md  detailed_sequence_demo.py  example_input.json  pyproject.toml  requirements.txt  requirements_specification.md  run_all_checks.sh  test_basic.py  test_sequence_demo.py
.claude/: settings.local.json
docs/: api_reference.md  installation.md  user_guide.md
examples/: README.md  basic_scale.json  chromatic_scale.json  with_modifiers.json
examples/tutorial/: 01_first_note.json  02_three_notes.json  03_with_modifier.json
src/kantan_play_midi/: __init__.py  cli.py  config.py  converter.py  exceptions.py  input_handler.py  models.py  player.py  processor.py  sequence.py  timing.py
tests/: conftest.py  test_input_handler.py  test_models.py  test_player.py  test_processor.py  test_sequence.py  test_timing.py
